OldArchive/857985e1dbefa25831170323b9197934-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp: In function 'int main()':
main.cpp:141:11: error: variable or field 'compilefailhere' declared void
     die_t compilefailhere = 4;
           ^
main.cpp:142:10: error: 'diehere' was not declared in this scope
     lamb(diehere);
          ^
